--- a/application.ini
+++ b/application.ini
@@ -1,9 +1,9 @@
 [App]
-Vendor=XULTest
-Name=myapp
-Version=1.0
-BuildID=20150422
-ID=xulapp@xultest.org
+Vendor=FIWARE
+Name=Snic
+Version=0.1
+BuildID=20150726
+ID={37e45b3c-4eae-4694-bc39-837ffa084faf}
 
 [Gecko]
 MinVersion=1.8
